WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261623
[iOS] Crash when closing and removing a WKWebView with an active find interaction
https://bugs.webkit.org/show_bug.cgi?id=261623
Summary
[iOS] Crash when closing and removing a WKWebView with an active find interac...
Aditya Keerthi
Reported
2023-09-15 14:48:54 PDT
rdar://115543506
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2023-09-15 15:06:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17828
EWS
Comment 2
2023-09-15 18:32:55 PDT
Committed
268044@main
(4473b145e837): <
https://commits.webkit.org/268044@main
> Reviewed commits have been landed. Closing PR #17828 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug